# esp32-c3-32s-kit-example

./: Cargo.toml  README.md
.cargo/: config.toml
resources/: partitions.csv
src/: button.rs  main.rs  rgb.rs
