[package]
name = "esp32-c3-32s-kit-example"
version = "0.1.0"
authors = ["javiser <javiser@users.noreply.github.com>"]
description = "Simple example for ESP-C3-32S-Kit board from Waveshare"
keywords = ["esp32c3", "esp-idf", "embedded-hal", "example"]
license = "MIT"
repository = "https://github.com/javiser/esp32-c3-32s-kit-example"
readme = "README.md"
edition = "2021"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
native = ["esp-idf-sys/native"]

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
esp-idf-sys = { version = "0.30", default-features = false, features = ["binstart", "pio"] }
esp-idf-svc = "0.36"
esp-idf-hal = { git = "https://github.com/sirhcel/esp-idf-hal", branch="ledc-with-resolution" }
embedded-hal = "1.0.0-alpha.6"

[build-dependencies]
embuild = "0.28"
anyhow = "1"
